--- a/test2.yaml
+++ b/test2.yaml
@@ -3,6 +3,7 @@ kind: Project
 metadata:
      name: test-case1
      annotations:
+       argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,ServerSideApply=true,ApplyOutOfSyncOnly=true
        openshift.io/display-name: "test1"
        openshift.io/description: "test1"
 spec:
